--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Noto Sans";
+  font-style: normal;
+  color: var(--black);
 }
 
 a {
@@ -15,12 +16,13 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+:root {
+  --black: #3b434e;
+  --violet: #7653fc;
+  --green: #1dc37e;
+  --lightgreen: #c8f8e4;
+  --lightgray: #ebebeb;
+  --gray: #787d85;
+  --orange: #fc836d;
+  --red: #de0000;
 }
