--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,8 @@ a {
 }
 
 .over{
-  background-color: #1dc37e;
+  transition: all 0.3s ease-out;
+  transform: scale(125%);
   cursor: pointer;
 }
 
